crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__jsx-6.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"<Foo bar={baz} />\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 17,
                    },
                },
                span: 0..17,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 17,
                            },
                        },
                        span: 0..17,
                        kind: JSXElement(
                            JSXElement {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 17,
                                    },
                                },
                                span: 0..17,
                                name: "Foo",
                                attrs: [
                                    JSXAttr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 14,
                                            },
                                        },
                                        span: 5..14,
                                        ident: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                            },
                                            span: 5..8,
                                            name: "bar",
                                        },
                                        value: JSXExprContainer(
                                            JSXExprContainer {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 9,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 14,
                                                    },
                                                },
                                                span: 9..14,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 10..13,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 10,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 13,
                                                                },
                                                            },
                                                            span: 10..13,
                                                            name: "baz",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                children: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
